--- a/config.json
+++ b/config.json
@@ -1,12 +1,7 @@
-{
-  "type": "service_account",
-  "project_id": "",
-  "private_key_id": "",
-  "private_key": "",
-  "client_email": "",
-  "client_id": "",
-  "auth_uri": "",
-  "token_uri": "",
-  "auth_provider_x509_cert_url": "",
-  "client_x509_cert_url": ""
-}
+/* 
+
+  This is a placeholder file. You can generate this file using this page:
+  
+  https://cloud.google.com/docs/authentication/getting-started
+  
+ */
